# aquabot_theboys

./: README.md  package.xml  setup.cfg  setup.py
aquabot_theboys/: cmd_motors.py  filters.py  hub.py  object_detection_node.py  sensors.py
launch/: aquabot_theboys.launch.py
resource/: requirements.txt
